--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,9 +6,162 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
   color-scheme: dark;
+}
+
+@font-face {
+  font-family: Calibre;
+  font-style: normal;
+  font-weight: 200;
+  src:
+    url("/fonts/Calibre/Calibre-Light.ttf") format("ttf"),
+    url("/fonts/Calibre/Calibre-Light.woff") format("woff"),
+    url("/fonts/Calibre/Calibre-Light.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: Calibre;
+  font-style: italic;
+  font-weight: 200;
+  src:
+    url("/fonts/Calibre/Calibre-LightItalic.ttf") format("ttf"),
+    url("/fonts/Calibre/Calibre-LightItalic.woff") format("woff"),
+    url("/fonts/Calibre/Calibre-LightItalic.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: Calibre;
+  font-style: normal;
+  font-weight: 400;
+  src:
+    url("/fonts/Calibre/Calibre-Regular.ttf") format("ttf"),
+    url("/fonts/Calibre/Calibre-Regular.woff") format("woff"),
+    url("/fonts/Calibre/Calibre-Regular.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: Calibre;
+  font-style: italic;
+  font-weight: 400;
+  src:
+    url("/fonts/Calibre/Calibre-RegularItalic.ttf") format("ttf"),
+    url("/fonts/Calibre/Calibre-RegularItalic.woff") format("woff"),
+    url("/fonts/Calibre/Calibre-RegularItalic.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: Calibre;
+  font-style: normal;
+  font-weight: 500;
+  src:
+    url("/fonts/Calibre/Calibre-Medium.ttf") format("ttf"),
+    url("/fonts/Calibre/Calibre-Medium.woff") format("woff"),
+    url("/fonts/Calibre/Calibre-Medium.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: Calibre;
+  font-style: italic;
+  font-weight: 500;
+  src:
+    url("/fonts/Calibre/Calibre-MediumItalic.ttf") format("ttf"),
+    url("/fonts/Calibre/Calibre-MediumItalic.woff") format("woff"),
+    url("/fonts/Calibre/Calibre-MediumItalic.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: Calibre;
+  font-style: normal;
+  font-weight: 600;
+  src:
+    url("/fonts/Calibre/Calibre-Semibold.ttf") format("ttf"),
+    url("/fonts/Calibre/Calibre-Semibold.woff") format("woff"),
+    url("/fonts/Calibre/Calibre-Semibold.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: Calibre;
+  font-style: italic;
+  font-weight: 600;
+  src:
+    url("/fonts/Calibre/Calibre-SemiboldItalic.ttf") format("ttf"),
+    url("/fonts/Calibre/Calibre-SemiboldItalic.woff") format("woff"),
+    url("/fonts/Calibre/Calibre-SemiboldItalic.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: SFMono;
+  font-style: normal;
+  font-weight: 400;
+  src:
+    url("/fonts/SFMono/SFMono-Regular.ttf") format("ttf"),
+    url("/fonts/SFMono/SFMono-Regular.woff") format("woff"),
+    url("/fonts/SFMono/SFMono-Regular.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: SFMono;
+  font-style: italic;
+  font-weight: 400;
+  src:
+    url("/fonts/SFMono/SFMono-RegularItalic.ttf") format("ttf"),
+    url("/fonts/SFMono/SFMono-RegularItalic.woff") format("woff"),
+    url("/fonts/SFMono/SFMono-RegularItalic.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: SFMono;
+  font-style: normal;
+  font-weight: 500;
+  src:
+    url("/fonts/SFMono/SFMono-Medium.ttf") format("ttf"),
+    url("/fonts/SFMono/SFMono-Medium.woff") format("woff"),
+    url("/fonts/SFMono/SFMono-Medium.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: SFMono;
+  font-style: italic;
+  font-weight: 500;
+  src:
+    url("/fonts/SFMono/SFMono-MediumItalic.ttf") format("ttf"),
+    url("/fonts/SFMono/SFMono-MediumItalic.woff") format("woff"),
+    url("/fonts/SFMono/SFMono-MediumItalic.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: SFMono;
+  font-style: normal;
+  font-weight: 600;
+  src:
+    url("/fonts/SFMono/SFMono-Semibold.ttf") format("ttf"),
+    url("/fonts/SFMono/SFMono-Semibold.woff") format("woff"),
+    url("/fonts/SFMono/SFMono-Semibold.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: SFMono;
+  font-style: italic;
+  font-weight: 600;
+  src:
+    url("/fonts/SFMono/SFMono-SemiboldItalic.ttf") format("ttf"),
+    url("/fonts/SFMono/SFMono-SemiboldItalic.woff") format("woff"),
+    url("/fonts/SFMono/SFMono-SemiboldItalic.woff2") format("woff2");
+}
+
+::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #8892b0;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
 }
 
 .hash-span {
@@ -18,6 +169,8 @@
   padding-bottom: 100px;
   display: block;
 }
+
+
 
 .black-gradient {
   background: #000000;
