--- a/src/index.css
+++ b/src/index.css
@@ -185,11 +185,11 @@
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.violet-gradient {
-  background: #804dee;
-  background: linear-gradient(-90deg, #804dee 0%, rgba(60, 51, 80, 0) 100%);
+.green-gradient {
+  background: #62f8d5;
+  background: linear-gradient(-90deg, #62f8d5 0%, rgba(60, 51, 80, 0) 100%);
   background: -webkit-linear-gradient(-90deg,
-      #804dee 0%,
+      #62f8d5 0%,
       rgba(60, 51, 80, 0) 100%);
 }
 
@@ -270,6 +270,32 @@
   text-indent: -9999em;
   animation: mulShdSpin 1.1s infinite ease;
   transform: translateZ(0);
+}
+
+.links {
+  text-decoration: none;
+  position: relative;
+  overflow: hidden;
+}
+
+.links::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  right: 0;
+  width: 0;
+  bottom: -1px;
+  background: #62f8d5;
+  height: 1px;
+  transition-property: width;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-out;
+}
+
+.links:hover::after {
+  left: 0;
+  right: auto;
+  width: 100%;
 }
 
 @keyframes mulShdSpin {
