--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@
   color-scheme: dark;
 }
 
+h1, h2, h3, h4, h5, h6, p {
+  font-family: Calibre, 'sans-serif';
+}
+
 @font-face {
   font-family: Calibre;
   font-style: normal;
