--- a/src/index.css
+++ b/src/index.css
@@ -182,6 +182,15 @@ h1, h2, h3, h4, h5, h6, p {
   margin: 0 7px;
 }
 
+.writing-vlr {
+  writing-mode: vertical-lr;
+}
+
+.side-hover:hover {
+  color: rgb(98, 248, 213);
+  transform: translate(0, -2px);
+}
+
 .black-gradient {
   background: #000000;
   /* fallback for old browsers */
