--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
-#root {
-  max-width: 1280px;
+body {
+  overflow: overlay;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  padding: 0 5%;
+  background-color: #181818;
+  font-family: Calibre, sans-serif;
 }
 
 .logo {
